--- a/src/main/resources/templates/doctor_dashboard_radno.html
+++ b/src/main/resources/templates/doctor_dashboard_radno.html
@@ -11,18 +11,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded">
     <style>
-
-.table {
-
-    border-collapse: separate;
-    border-spacing:0 40px;
-    text-align: center;
-}
     </style>
 </head>
 
-<body class="container-flex p-5">
-<nav class="navbar navbar-expand-md navbar" style="">
+<body class="container-flex p-5" >
+<nav class="navbar navbar-expand-md navbar-dark bg-info" style="">
     <div class="container-flex">
         <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent" style="">
             <ul class="navbar-nav">
@@ -39,34 +32,20 @@
         </div>
     </div>
 </nav>
-<div class="h-20 container-flex">
+<div class="h-20 flex bg-info">
     <div class="container-flex">
         <div id="md-8" style="" class="row">
-            <div class="col-md-2 text-left align-items-center d-flex" style="">
-                <h3 class="col-md-12 display-4 text-primary p-3 align-items-center"><b class="d-flex">
-                    <a href="#" title="logo" style="text-align: center;">
-                        <img src="../templates/ikone/logo_mali.webp" class="img-responsive"></a></b></h3>
+            <div class="col text-center" style="">
+                <h3 class="col-md-9 display-3 text-light text-nowrap p-3"><b class="d-flex">Opća bolnica Zabok&nbsp;</b><b class="d-flex">i bolnica hrvatskih veterana&nbsp;</b></h3>
             </div>
-            <div class="col-md-6 text-left">
-                <h3 class="col-md-12 display-4 text-primary text-left p-3">
-                    <b class="d-flex">Opća bolnica Zabok&nbsp;</b>
-                    <b class="d-flex">i bolnica hrvatskih veterana&nbsp;</b></h3>
-            </div>
-            <div class="col-md-2 d-flex align-items-center" style="text-align: center;">
-                <h2 class="col-md-12" style="text-align: center">
-                    <b>25.02.2023&nbsp; </b><b>18:20:35&nbsp;</b></h2>
-            </div>
-            <div class="col-md-2 text-center d-flex align-items-center justify-content-end">
-                <h3 class="p-3 display-4" style="background-color:red"><b class="d-flex">
-                    <a href="#" title="hitna" style="text-align: center;">
-                        <img src="../templates/ikone/hitna_d.webp" class="img-responsive"></a></b></h3>
+            <div class="col-md-3 text-center" style="background-color:red">
+                <h3 class="display-3 text-light text-nowrap py-3" style="background-color:red"><b class="d-flex">Životno&nbsp;</b><b class="d-flex">ugroženi&nbsp;</b></h3>
             </div>
         </div>
-        <hr class="solid">
     </div>
 </div>
 <div class="row">
-    <div class="container-flex">
+    <div class="container">
         <div class="row">
             <div class="col-lg-4 col-md-6 p-3">
                 <h4><b>UKUPNO U OBRADI</b></h4>
@@ -96,7 +75,7 @@
     <div class="container-flex">
         <div class="col">
             <h3 class="text-center">
-                <p class="display-3 text-light p-3" style="background-color: red"><b>H</b></p>
+                <p class="display-3 text-light p-3" style="background-color: red"><b>Životno ugroženi</b></p>
             </h3>
         </div>
     </div>
@@ -107,7 +86,7 @@
             <table class="table table-bordered table-striped">
                 <thead class="thead-dark">
                 <tr class="display: inline-block">
-                    <th class="font-weight-bold text-center d-flex align-items-center">
+                    <th class="font-weight-bold">
                         <h3>Trijažna kategorija</h3>
                     </th>
                     <th class="font-weight-bold">
@@ -131,44 +110,38 @@
                     <th class="font-weight-bold">
                         <h3>Ambulanta</h3>
                     </th>
-                    <th class="font-weight-bold">
-                        <h3>Ispis</h3>
-                    </th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
-                    <td class="font-weight-bold" style="background-color: red">
-                        <h3></h3>
+                    <td class="font-weight-bold" style="background-color:red">
+                        <h3 class="text-center ">I</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>#435821</h3>
+                        <h3 class="text-center">#345821</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Marko</h3>
+                        <h3 class="text-center">Marko</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Marković</h3>
+                        <h3 class="text-center">Marković</h3>
+                    </td>
+                    <td class="font-weight-bold" align="center">
+                        <h3 class="text-center">25.02.2023 10:13</h3>
+                    </td>
+                    <td class="row flex" align="center" style="text-center">
+                        <h3><a href="#" title="hitna" style="text-align: center;"><img src="../templates/ikone/hitna.webp" class="img-responsive"></a></h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>25.02.2023 10:16</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/hitna.webp" ></a>
+                        <h3 class="text-center">B1</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Interna</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>B2</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/printer.webp" ></a>
+                        <h3 class="text-center">I</h3>
                     </td>
                 </tr>
                 <tr>
                     <td class="font-weight-bold" style="background-color: red">
-                        <h3></h3>
+                        <h3>I</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>#435821</h3>
@@ -182,22 +155,19 @@
                     <td class="font-weight-bold">
                         <h3>25.02.2023 10:23</h3>
                     </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/hitna.webp" ></a>
+                    <td class="font-weight-bold">
+                        <h3>Status</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Interna</h3>
+                        <h3>Lokacija</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>Ambulanta</h3>
                     </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/printer.webp" ></a>
-                    </td>
                 </tr>
                 <tr>
                     <td class="font-weight-bold" style="background-color:orange">
-                        <h3></h3>
+                        <h3>II</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>#432821</h3>
@@ -211,8 +181,8 @@
                     <td class="font-weight-bold">
                         <h3>25.02.2023 11:13</h3>
                     </td>
-                    <td>
-                        <a href="#" title="krevet"><img src="../templates/ikone/krevet3.webp" ></a>
+                    <td class="font-weight-bold">
+                        <h3>Status</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>Lokacija</h3>
@@ -220,13 +190,10 @@
                     <td class="font-weight-bold">
                         <h3>Ambulanta</h3>
                     </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/printer.webp" ></a>
-                    </td>
                 </tr>
                 <tr>
                     <td class="font-weight-bold" style="background-color:yellow">
-                        <h3></h3>
+                        <h3>III</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>#347853</h3>
@@ -240,8 +207,8 @@
                     <td class="font-weight-bold">
                         <h3>25.02.2023 10:53</h3>
                     </td>
-                    <td>
-                        <a href="#" title="krevet"><img src="../templates/ikone/krevet3.webp" ></a>
+                    <td class="font-weight-bold">
+                        <h3>Status</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>Lokacija</h3>
@@ -249,13 +216,10 @@
                     <td class="font-weight-bold">
                         <h3>Ambulanta</h3>
                     </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/printer.webp" ></a>
-                    </td>
                 </tr>
                 <tr>
                     <td class="font-weight-bold" style="background-color:yellow">
-                        <h3></h3>
+                        <h3>III</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>#339821</h3>
@@ -269,8 +233,8 @@
                     <td class="font-weight-bold">
                         <h3>25.02.2023 11:40</h3>
                     </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/rtg.webp" ></a>
+                    <td class="font-weight-bold">
+                        <h3>Status</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>Lokacija</h3>
@@ -278,13 +242,10 @@
                     <td class="font-weight-bold">
                         <h3>Ambulanta</h3>
                     </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/printer.webp" ></a>
-                    </td>
                 </tr>
                 <tr>
                     <td class="font-weight-bold" style="background-color:green">
-                        <h3></h3>
+                        <h3>IV</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>#443521</h3>
@@ -296,11 +257,10 @@
                         <h3>Prezime</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>25.02.2023
-                            10:20<a href="#" title="retr">  <img src="../templates/ikone/upitnik.webp" ></a></h3>
+                        <h3>25.02.2023 10:20</h3>
                     </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/kat4.webp" ></a>
+                    <td class="font-weight-bold">
+                        <h3>Status</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>Lokacija</h3>
@@ -308,13 +268,10 @@
                     <td class="font-weight-bold">
                         <h3>Ambulanta</h3>
                     </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/printer.webp" ></a>
-                    </td>
                 </tr>
                 <tr>
                     <td class="font-weight-bold" style="background-color: #2c76f8">
-                        <h3></h3>
+                        <h3>V</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>#743866</h3>
@@ -328,17 +285,14 @@
                     <td class="font-weight-bold">
                         <h3>25.02.2023 09:30</h3>
                     </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/osoba.webp" ></a>
+                    <td class="font-weight-bold">
+                        <h3>Status</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>Lokacija</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>Ambulanta</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/printer.webp" ></a>
                     </td>
                 </tr>
                 </tbody>
@@ -352,17 +306,17 @@
         </div>
     </div>
 </div>
-<div class="p-3 text-muted border-top">
-    <div class="container-flex">
+<div class="bg-info p-4" style=""></div>
+<div class="bg-info">
+    <div class="container">
         <div class="row d-flex justify-content-between">
             <div class="col-lg-8 col-md-6">
-                <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT Akademija 2023</p>
+                <p class="mb-0 text-light"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT Akademija 2023</p>
             </div>
+            <div class="col-lg-4 col-md-6"></div>
         </div>
     </div>
 </div>
 </body>
 
 </html>
-
-
