--- a/src/main/resources/templates/patient_dashboard_radno.html
+++ b/src/main/resources/templates/patient_dashboard_radno.html
@@ -11,14 +11,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded">
     <style>
-
-.table {
-
-    border-collapse: separate;
-    border-spacing:0 40px;
-    text-align: center;
-}
-    </style>
+    .table {
+      border-collapse: separate;
+      border-spacing: 0 40px;
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body class="container-flex p-5">
@@ -68,26 +66,8 @@
 <div class="row">
     <div class="container-flex">
         <div class="row">
-            <div class="col-lg-4 col-md-6 p-3">
-                <h4><b>UKUPNO U OBRADI</b></h4>
-                <p class="display-1" style=""><b>27</b></p>
-                <p>
-                    <a href="#">Link</a>
-                </p>
-            </div>
-            <div class="col-lg-4 col-md-6 p-3" style="">
-                <h4><b>UKUPNO U DOLASKU</b></h4>
-                <p class="display-1" style=""><b>2</b></p>
-                <p>
-                    <a href="#">Link</a>
-                </p>
-            </div>
-            <div class="col-lg-4 col-md-6 p-3" style="">
-                <h4><b>UKUPNO OPSERVACIJA</b></h4>
-                <p class="display-1" style=""><b>3</b></p>
-                <p>
-                    <a href="#">Link</a>
-                </p>
+            <div class="col-lg-4 col-md-12 p-3" >
+                <h4><b></b></h4>
             </div>
         </div>
     </div>
@@ -114,25 +94,13 @@
                         <h3 class=".d-print-table-cell">ID Pacijent</h3>
                     </th>
                     <th class="font-weight-bold">
-                        <h3>Ime</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3>Prezime</h3>
-                    </th>
-                    <th class="font-weight-bold">
                         <h3>Vrijeme dolaska</h3>
                     </th>
                     <th class="font-weight-bold">
                         <h3>Status</h3>
                     </th>
                     <th class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </th>
-                    <th class="font-weight-bold">
                         <h3>Ambulanta</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3>Ispis</h3>
                     </th>
                 </tr>
                 </thead>
@@ -145,25 +113,13 @@
                         <h3>#435821</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Marko</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Marković</h3>
-                    </td>
-                    <td class="font-weight-bold">
                         <h3>25.02.2023 10:16</h3>
                     </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/hitna.webp" ></a>
-                    </td>
                     <td class="font-weight-bold">
-                        <h3>Interna</h3>
+                        <h3>H</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>B2</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/printer.webp" ></a>
                     </td>
                 </tr>
                 <tr>
@@ -174,25 +130,13 @@
                         <h3>#435821</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ivo</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Ivić</h3>
-                    </td>
-                    <td class="font-weight-bold">
                         <h3>25.02.2023 10:23</h3>
                     </td>
                     <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/hitna.webp" ></a>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Interna</h3>
+                        <a href="#" title="hitna"><img src="../templates/ikone/hitna.webp"></a>
                     </td>
                     <td class="font-weight-bold">
                         <h3>Ambulanta</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/printer.webp" ></a>
                     </td>
                 </tr>
                 <tr>
@@ -203,25 +147,13 @@
                         <h3>#432821</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ime</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Prezime</h3>
-                    </td>
-                    <td class="font-weight-bold">
                         <h3>25.02.2023 11:13</h3>
                     </td>
                     <td>
-                        <a href="#" title="krevet"><img src="../templates/ikone/krevet3.webp" ></a>
+                        <a href="#" title="krevet"><img src="../templates/ikone/krevet3.webp"></a>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Ambulanta</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/printer.webp" ></a>
+                        <h3>D5</h3>
                     </td>
                 </tr>
                 <tr>
@@ -232,25 +164,13 @@
                         <h3>#347853</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ime</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Prezime</h3>
-                    </td>
-                    <td class="font-weight-bold">
                         <h3>25.02.2023 10:53</h3>
                     </td>
                     <td>
-                        <a href="#" title="krevet"><img src="../templates/ikone/krevet3.webp" ></a>
+                        <a href="#" title="krevet"><img src="../templates/ikone/krevet3.webp"></a>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Ambulanta</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/printer.webp" ></a>
+                        <h3>E2</h3>
                     </td>
                 </tr>
                 <tr>
@@ -261,25 +181,13 @@
                         <h3>#339821</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ime</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Prezime</h3>
-                    </td>
-                    <td class="font-weight-bold">
                         <h3>25.02.2023 11:40</h3>
                     </td>
                     <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/rtg.webp" ></a>
+                        <a href="#" title="hitna"><img src="../templates/ikone/rtg.webp"></a>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Ambulanta</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/printer.webp" ></a>
+                        <h3>RTG</h3>
                     </td>
                 </tr>
                 <tr>
@@ -290,26 +198,13 @@
                         <h3>#443521</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ime</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Prezime</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>25.02.2023
-                            10:20<a href="#" title="retr">  <img src="../templates/ikone/upitnik.webp" ></a></h3>
+                        <h3>25.02.2023 10:20<a href="#" title="retr"></h3>
                     </td>
                     <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/kat4.webp" ></a>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Lokacija</h3>
+                        <a href="#" title="hitna"><img src="../templates/ikone/kat4.webp"></a>
                     </td>
                     <td class="font-weight-bold">
                         <h3>Ambulanta</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/printer.webp" ></a>
                     </td>
                 </tr>
                 <tr>
@@ -320,25 +215,13 @@
                         <h3>#743866</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ime</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Prezime</h3>
-                    </td>
-                    <td class="font-weight-bold">
                         <h3>25.02.2023 09:30</h3>
                     </td>
                     <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/osoba.webp" ></a>
+                        <a href="#" title="hitna"><img src="../templates/ikone/osoba.webp"></a>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Ambulanta</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/printer.webp" ></a>
+                        <h3>Čekaonica</h3>
                     </td>
                 </tr>
                 </tbody>
@@ -364,5 +247,3 @@
 </body>
 
 </html>
-
-
