administrator_page.html upisani podaci

--- a/src/main/resources/templates/administrator_page.html
+++ b/src/main/resources/templates/administrator_page.html
@@ -60,8 +60,8 @@
             <div class="d-flex justify-content-center col-md-2">
                 <h3 class="display-4 p-3 d-flex align-items-center justify-content-center flex-grow-1" style="background-color:red">
                     <b class="d-flex">
-                    <a href="#" title="hitna" style="text-align: center;">
-                        <img src="../ikone/hitna_d.webp" class="img-responsive"></a></b></h3>
+                        <a href="#" title="hitna" style="text-align: center;">
+                            <img src="../ikone/hitna_d.webp" class="img-responsive"></a></b></h3>
             </div>
         </div>
         <hr class="solid">
@@ -69,7 +69,7 @@
 </div>
 <div class="row">
     <div class="container-flex">
-        <div class="row" >
+        <div class="row">
             <div class="col-lg-4 col-md-12 p-3">
                 <h4><b></b></h4>
             </div>
@@ -85,7 +85,7 @@
 </div>
 <div class="">
     <div class="container-flex">
-        <div class="table-responsive">
+        <div class="table-responsive" >
             <table class="table table-bordered table-striped">
                 <thead class="thead-dark">
                 <tr class="display: inline-block">
@@ -142,7 +142,7 @@
                         <h3>Interna</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>B2</h3>
+                        <h3>Akutni dio </h3>
                     </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
@@ -156,10 +156,10 @@
                         <h3>#435821</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ivo</h3>
+                        <h3>Lidija </h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ivić</h3>
+                        <h3>Horvat</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>25.02.2023 10:23</h3>
@@ -171,7 +171,7 @@
                         <h3>Interna</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ambulanta</h3>
+                        <h3>Akutni dio </h3>
                     </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
@@ -185,10 +185,10 @@
                         <h3>#432821</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ime</h3>
+                        <h3>Ana</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Prezime</h3>
+                        <h3>Anić</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>25.02.2023 11:13</h3>
@@ -214,10 +214,10 @@
                         <h3>#347853</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ime</h3>
+                        <h3>Ivan</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Prezime</h3>
+                        <h3>Horvat</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>25.02.2023 10:53</h3>
@@ -229,7 +229,7 @@
                         <h3>Lokacija</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>E3</h3>
+                        <h3>Subakutni dio </h3>
                     </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
@@ -243,10 +243,10 @@
                         <h3>#339821</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ime</h3>
+                        <h3>Marko</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Prezime</h3>
+                        <h3>Županić</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>25.02.2023 11:40</h3>
@@ -272,10 +272,10 @@
                         <h3>#443521</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ime</h3>
+                        <h3>Stipe </h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Prezime</h3>
+                        <h3>Stipić</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>25.02.2023 10:20<a href="#" title="retr"> <img src="../ikone/upitnik.webp"></a></h3>
@@ -287,7 +287,7 @@
                         <h3>Lokacija</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Čekoanica</h3>
+                        <h3>Subakutni dio</h3>
                     </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
@@ -301,10 +301,10 @@
                         <h3>#743866</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ime</h3>
+                        <h3>Ivo</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Prezime</h3>
+                        <h3>Ivo</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>25.02.2023 09:30</h3>
@@ -343,4 +343,5 @@
     </div>
 </div>
 </body>
+
 </html>
