--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -118,7 +118,7 @@
                         <h3>25.02.2023 10:16</h3>
                     </td>
                     <td>
-                        <a href="#" title="hitna"><img src="../templates/ikone/hitna.webp"></a>
+                        <a href="#" title="hitna"><img src="../ikone/hitna.webp"></a>
                     </td>
                     <td class="font-weight-bold">
                         <h3>Reanimacija</h3>
