Dodana polja za status obrade CaseOhbp Izmjenae logo i gumb za hitna stanja administrator_page.html

--- a/src/main/resources/templates/administrator_page.html
+++ b/src/main/resources/templates/administrator_page.html
@@ -58,10 +58,10 @@
                     <b>25.02.2023&nbsp; </b><b>18:20:35&nbsp;</b></h2>
             </div>
             <div class="d-flex justify-content-center col-md-2">
-                <h3 class="display-4 p-3 d-flex align-items-center justify-content-center flex-grow-1" style="background-color:red">
+                <h3 class="display-4 p-3 d-flex align-items-center justify-content-center flex-grow-1"> <!-- style="background-color:red">-->
                     <b class="d-flex">
                         <a href="#" title="hitna" style="text-align: center;">
-                            <img src="../ikone/hitna_d.webp" class="img-responsive"></a></b></h3>
+                            <img src="../ikone/hslucaj.webp" class="img-responsive"></a></b></h3>
             </div>
         </div>
         <hr class="solid">
