--- a/src/main/resources/templates/dashboard_ohbp.html
+++ b/src/main/resources/templates/dashboard_ohbp.html
@@ -53,22 +53,29 @@
 <body class="container-max-width p-3">
 <nav class="navbar navbar-expand-md navbar" style="">
   <div class="container-flex">
-    <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent" style="">
+    <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent"
+         style="">
       <ul class="navbar-nav">
         <li class="h4 text-light text-center">
-          <a class="nav-link mx-2" onclick="window.location.href='/redirectToDashboardOhbp'">Administrator</a>
+          <a class="nav-link mx-2"
+             onclick="window.location.href='/'">Administrator</a>
         </li>
         <li class="h4 text-light text-center d-flex flex-grow-1">
           <a class="nav-link mx-2" onclick="window.location.href='/redirectToDashboardOhbp'">OHBP</a>
         </li>
         <li class="h4 text-light text-center d-flex flex-grow-1">
-          <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationOhbp'">OHBP Opservacija</a>
+          <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationOhbp'">OHBP
+            Opservacija</a>
         </li>
         <li class="h4 text-light text-left d-flex flex-grow-1">
           <a class="nav-link mx-2" onclick="window.location.href='/redirectToPatients'">Pacijenti</a>
         </li>
         <li class="h4 text-light text-left d-flex flex-grow-1">
-          <a class="nav-link mx-2" onclick="window.location.href='/redirectToPatients'">Pacijenti opservacija</a>
+          <a class="nav-link mx-2" onclick="window.location.href='/redirectToTriageCategory'">Trijažna kategorija</a>
+        </li>
+        <li class="h4 text-light text-left d-flex flex-grow-1">
+          <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationPatients'">Pacijenti
+            opservacija</a>
         </li>
         <li class="h4 text-light text-center d-flex">
           <a class="nav-link mx-2" onclick="window.location.href='/redirectToLegend'">Legenda</a>
