--- a/src/main/resources/templates/observation_patients.html
+++ b/src/main/resources/templates/observation_patients.html
@@ -19,19 +19,22 @@
   </style>
 </head>
 
-<body class="container-flex p-5">
+<body class="container-flex p-4" >
 <nav class="navbar navbar-expand-md navbar" style="">
     <div class="container-flex">
         <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent" style="">
             <ul class="navbar-nav">
-                <li class="display-6 text-light">
-                    <a class="nav-link mx-2" href="#">Dashboard</a>
+                <li class="h3 text-light text-center d-flex flex-grow-1">
+                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToDashboardOhbp'">OHBP</a>
                 </li>
-                <li class="display-6 text-light">
-                    <a class="nav-link mx-2" href="#">Opservacija</a>
+                <li class="h3 text-light text-center d-flex flex-grow-1">
+                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationOhbp'">Opservacija</a>
                 </li>
-                <li class="display-6 text-light">
-                    <a class="nav-link mx-2" href="#">Legenda</a>
+                <li class="h3 text-light text-left d-flex flex-grow-1">
+                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToPatients'">Pacijenti</a>
+                </li>
+                <li class="h3 text-light text-center d-flex flex-grow-1">
+                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToLegend'">Legenda</a>
                 </li>
             </ul>
         </div>
@@ -40,22 +43,24 @@
 <div class="h-20 container-flex">
     <div class="container-flex">
         <div id="md-8" style="" class="row">
-            <div class="col-md-2 text-left align-items-center d-flex" style="">
-                <h3 class="col-md-12 display-4 text-primary p-3 align-items-center"><b class="d-flex">
+            <div class="col-md-3 d-flex align-items-center justify-content-start" style="">
+                <div class="display-4 p-3 d-flex justify-content-center align-items-center">
                     <a href="#" title="logo" style="text-align: center;">
-                        <img src="../templates/ikone/logo_mali.webp" class="img-responsive"></a></b></h3>
+                        <img src="../ikone/logo_mali.webp" class="img-responsive"></a>
+                </div>
             </div>
-            <div class="col-md-6 text-left">
-                <h3 class="col-md-12 display-4 text-primary text-left p-3">
-                    <b class="d-flex">Opća bolnica Zabok&nbsp;</b>
-                    <b class="d-flex">i bolnica hrvatskih veterana&nbsp;</b></h3>
+            <div class="text-left d-flex justify-content-center col-md-5 align-items-center" style="">
+                <h1 class="text-primary w-100 d-flex justify-content-center text-left align-items-center flex-grow-1" style="">
+                    <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
             </div>
-            <div class="col-md-2 d-flex align-items-center" style="text-align: center;">
-                <h2 class="col-md-12" style="text-align: center">
+            <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
+                <h2 class="flex-grow-1 text-primary" style="text-align: center" contenteditable="true">
                     <b>25.02.2023&nbsp; </b><b>18:20:35&nbsp;</b></h2>
             </div>
-            <div>
-
+            <div class="d-flex justify-content-center col-md-2">
+                <h3 class="d-flex">
+                    <a href="#" title="krevet" style="text-align: center;">
+                        <img src="../ikone/krevet3.webp" class="img-responsive"></a></b></h3>
             </div>
         </div>
         <hr class="solid">
@@ -64,7 +69,7 @@
 <div class="row">
     <div class="container-flex">
         <div class="row">
-            <div class="col-lg-4 col-md-12 p-3" >
+            <div class="col-lg-4 col-md-12 p-3">
                 <h4><b></b></h4>
             </div>
         </div>
@@ -72,9 +77,9 @@
 </div>
 <div class="py-3" style="">
     <div class="container-flex">
-
-
-
+        <div class="col">
+            <p class="display-3 text-light p-3 text-center shadow-lg align-items-center justify-content-center" style="background-color: red" text="center"> H </p>
+        </div>
     </div>
 </div>
 <div class="">
@@ -84,37 +89,44 @@
                 <thead class="thead-dark">
                 <tr class="display: inline-block">
                     <th class="font-weight-bold text-center d-flex align-items-center">
-                        <h3>Trijažna kategorija</h3>
+                        <h3 class="text-left justify-content-center align-items-center d-flex">Trijažna kategorija</h3>
                     </th>
                     <th class="font-weight-bold">
-                        <h3 class=".d-print-table-cell">ID</h3>
+                        <h3 class=".d-print-table-cell">ID Pacijent</h3>
                     </th>
                     <th class="font-weight-bold">
-                        <h3>Opis</h3>
+                        <h3>Ime</h3>
+                    </th>
+                    <th class="font-weight-bold">
+                        <h3>Prezime</h3>
+                    </th>
+                    <th class="font-weight-bold">
+                        <h3>Vrijeme dolaska</h3>
+                    </th>
+                    <th class="font-weight-bold">
+                        <h3>Lokacija</h3>
                     </th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
-                    <td class="font-weight-bold" style="background-color: red">
-                        <h3></h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Trijažna kategorija 1</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Postupiti odmah sa ciljem održavanja života pacijenta</h3>
-                    </td>
-                </tr>
-                <tr>
                     <td class="font-weight-bold" style="background-color:orange">
                         <h3></h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Trijažna kategorija 2</h3>
+                        <h3>#432821</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ozbiljno bolestan, ozlijeđen prijent ....</h3>
+                        <h3>Ana</h3>
+                    </td>
+                    <td class="font-weight-bold">
+                        <h3>Anić</h3>
+                    </td>
+                    <td class="font-weight-bold">
+                        <h3>25.02.2023 11:13</h3>
+                    </td>
+                    <td class="font-weight-bold">
+                        <h3>Akutni dio</h3>
                     </td>
                 </tr>
                 <tr>
@@ -122,32 +134,39 @@
                         <h3></h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Trijažna kategorija 3</h3>
+                        <h3>#347853</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Opis TK 3</h3>
+                        <h3>Ivan</h3>
+                    </td>
+                    <td class="font-weight-bold">
+                        <h3>Horvat</h3>
+                    </td>
+                    <td class="font-weight-bold">
+                        <h3>25.02.2023 10:53</h3>
+                    </td>
+                    <td class="font-weight-bold">
+                        <h3>Subakutni dio</h3>
                     </td>
                 </tr>
                 <tr>
-                    <td class="font-weight-bold" style="background-color:green">
+                    <td class="font-weight-bold" style="background-color:yellow">
                         <h3></h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Trijažna kategorija 4</h3>
+                        <h3>#339821</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Opis TK 4</h3>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="font-weight-bold" style="background-color: #2c76f8">
-                        <h3></h3>
+                        <h3>Marko</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Trijažna kategorija 5</h3>
+                        <h3>Županić</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Opis TK 5</h3>
+                        <h3>25.02.2023 11:40</h3>
+                    </td>
+                    <td class="font-weight-bold">
+                        <h3>Subakutni dio</h3>
                     </td>
                 </tr>
                 </tbody>
