JavaScript izmjena formi za testiranje Aministrator nakon 40 sek OHBP OHBP->10 sek OHBP opservacija OHBP Opservacija -> 10sek OHBP
pacijenti -> 10 sek trijažne kategorije
trijažne kategorije ->10 sek pacijenti opservacija
pacijenti opservacija  -> 10 sek legenda
legenda 10 -> sek pacijenti

--- a/src/main/resources/templates/administrator_page.html
+++ b/src/main/resources/templates/administrator_page.html
@@ -37,12 +37,15 @@
     }
 
     </style>
+
     <script>
+
     setTimeout(function() {
       window.location.href = "/redirectToDashboardOhbp";
-    }, 10000);
+    }, 40000);
 
     </script>
+
 
     <script>
 
@@ -118,7 +121,7 @@ window.onbeforeunload = function() {
             <div id="md-8" style="" class="row">
                 <div class="col-md-3 d-flex align-items-center justify-content-start" style="">
                     <div class="display-4 p-3 d-flex justify-content-center align-items-center">
-                        <a href="#" title="logo" style="text-align: center;">
+                        <a href="#" title="logo" style="text-align: center;" onclick="window.location.href='/'">
                             <img src="../ikone/logo_mali.webp" class="img-responsive"></a>
                     </div>
                 </div>
