--- a/src/main/resources/templates/dashboard_ohbp.html
+++ b/src/main/resources/templates/dashboard_ohbp.html
@@ -38,7 +38,7 @@
   </style>
   <script>
     setTimeout(function() {
-      window.location.href = "/";
+      window.location.href = "/redirectToObservationOhbp";
     }, 10000);
   </script>
   <script>
@@ -89,7 +89,7 @@
     <div id="md-8" style="" class="row">
       <div class="col-md-3 d-flex align-items-center justify-content-start" style="">
         <div class="display-4 p-3 d-flex justify-content-center align-items-center">
-          <a href="#" title="logo" style="text-align: center;">
+          <a href="#" title="logo" style="text-align: center;" onclick="window.location.href='/'">
             <img src="../ikone/logo_mali.webp" class="img-responsive"></a>
         </div>
       </div>
