--- a/src/main/resources/templates/observation_patients.html
+++ b/src/main/resources/templates/observation_patients.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Doctor // Dasboard</title>
+    <title> Administrator | OBZ </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -13,39 +13,51 @@
     <style>
     .table {
       border-collapse: separate;
-      border-spacing: 0 40px;
+      border-spacing: 0 30px;
+      text-justify: center;
       text-align: center;
     }
+
+    @keyframes blink {
+      0% {
+        background-color: transparent;
+      }
+
+      50% {
+        background-color: red;
+      }
+
+      100% {
+        background-color: transparent;
+      }
+    }
+
+    .blink {
+      animation: blink 1s infinite;
+    }
   </style>
+    <script>
+    setTimeout(function() {
+      window.location.href = "/redirectToLegend";
+    }, 10000);
+  </script>
+    <script>
+    function blink() {
+      var elementToBlink = document.getElementById("element-to-blink");
+      elementToBlink.classList.toggle("blink");
+    }
+    var isBlinking = false;
+  </script>
+</head>
 </head>
 
-<body class="container-flex p-4" >
-<nav class="navbar navbar-expand-md navbar" style="">
-    <div class="container-flex">
-        <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent" style="">
-            <ul class="navbar-nav">
-                <li class="h3 text-light text-center d-flex flex-grow-1">
-                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToDashboardOhbp'">OHBP</a>
-                </li>
-                <li class="h3 text-light text-center d-flex flex-grow-1">
-                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationOhbp'">Opservacija</a>
-                </li>
-                <li class="h3 text-light text-left d-flex flex-grow-1">
-                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToPatients'">Pacijenti</a>
-                </li>
-                <li class="h3 text-light text-center d-flex flex-grow-1">
-                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToLegend'">Legenda</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<body class="container-flex p-4">
 <div class="h-20 container-flex">
     <div class="container-flex">
         <div id="md-8" style="" class="row">
             <div class="col-md-3 d-flex align-items-center justify-content-start" style="">
                 <div class="display-4 p-3 d-flex justify-content-center align-items-center">
-                    <a href="#" title="logo" style="text-align: center;">
+                    <a href="#" title="logo" style="text-align: center;" onclick="window.location.href='/'">
                         <img src="../ikone/logo_mali.webp" class="img-responsive"></a>
                 </div>
             </div>
@@ -58,29 +70,16 @@
                     <b>25.02.2023&nbsp; </b><b>18:20:35&nbsp;</b></h2>
             </div>
             <div class="d-flex justify-content-center col-md-2">
-                <h3 class="d-flex">
+                <h3 class="d-flex align-items-center">
                     <a href="#" title="krevet" style="text-align: center;">
-                        <img src="../ikone/krevet3.webp" class="img-responsive"></a></b></h3>
+                        <img src="../ikone/krevet3.webp" class="img-responsive"></a></h3>
             </div>
         </div>
         <hr class="solid">
     </div>
 </div>
 <div class="row">
-    <div class="container-flex">
-        <div class="row">
-            <div class="col-lg-4 col-md-12 p-3">
-                <h4><b></b></h4>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="py-3" style="">
-    <div class="container-flex">
-        <div class="col">
-            <p class="display-3 text-light p-3 text-center shadow-lg align-items-center justify-content-center" style="background-color: red" text="center"> H </p>
-        </div>
-    </div>
+    <div class="container-flex"></div>
 </div>
 <div class="">
     <div class="container-flex">
@@ -93,12 +92,6 @@
                     </th>
                     <th class="font-weight-bold">
                         <h3 class=".d-print-table-cell">ID Pacijent</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3>Ime</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3>Prezime</h3>
                     </th>
                     <th class="font-weight-bold">
                         <h3>Vrijeme dolaska</h3>
@@ -117,12 +110,6 @@
                         <h3>#432821</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ana</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Anić</h3>
-                    </td>
-                    <td class="font-weight-bold">
                         <h3>25.02.2023 11:13</h3>
                     </td>
                     <td class="font-weight-bold">
@@ -137,12 +124,6 @@
                         <h3>#347853</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ivan</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Horvat</h3>
-                    </td>
-                    <td class="font-weight-bold">
                         <h3>25.02.2023 10:53</h3>
                     </td>
                     <td class="font-weight-bold">
@@ -153,14 +134,8 @@
                     <td class="font-weight-bold" style="background-color:yellow">
                         <h3></h3>
                     </td>
-                    <td class="font-weight-bold">
+                    <td class="font-weight-bold" >
                         <h3>#339821</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Marko</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Županić</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>25.02.2023 11:40</h3>
