--- a/src/main/resources/templates/triage_category.html
+++ b/src/main/resources/templates/triage_category.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Doctor // Dasboard</title>
+    <title> Administrator | OBZ </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -13,68 +13,71 @@
     <style>
     .table {
       border-collapse: separate;
-      border-spacing: 0 40px;
+      border-spacing: 0 30px;
+      text-justify: center;
       text-align: center;
     }
+
+    @keyframes blink {
+      0% {
+        background-color: transparent;
+      }
+
+      50% {
+        background-color: red;
+      }
+
+      100% {
+        background-color: transparent;
+      }
+    }
+
+    .blink {
+      animation: blink 1s infinite;
+    }
   </style>
+    <script>
+    setTimeout(function() {
+      window.location.href = "/redirectToObservationPatients";
+    }, 10000);
+  </script>
+    <script>
+    function blink() {
+      var elementToBlink = document.getElementById("element-to-blink");
+      elementToBlink.classList.toggle("blink");
+    }
+    var isBlinking = false;
+  </script>
 </head>
 
-<body class="container-flex p-4">
-<nav class="navbar navbar-expand-md navbar" style="">
-    <div class="container-flex">
-        <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent" style="">
-            <ul class="navbar-nav">
-                <li class="h3 text-light text-center d-flex flex-grow-1">
-                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToDashboardOhbp'">OHBP</a>
-                </li>
-                <li class="h3 text-light text-center d-flex flex-grow-1">
-                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationOhbp'">Opservacija</a>
-                </li>
-                <li class="h3 text-light text-left d-flex flex-grow-1">
-                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToPatients'">Pacijenti</a>
-                </li>
-                <li class="h3 text-light text-center d-flex flex-grow-1">
-                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToLegend'">Legenda</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<div class="h-20 container-flex">
+<body class="container-max-width p-3">
+<div class="h-20 container-flex" >
     <div class="container-flex">
         <div id="md-8" style="" class="row">
             <div class="col-md-3 d-flex align-items-center justify-content-start" style="">
                 <div class="display-4 p-3 d-flex justify-content-center align-items-center">
-                    <a href="#" title="logo" style="text-align: center;">
+                    <a href="#" title="logo" style="text-align: center;" onclick="window.location.href='/'">
                         <img src="../ikone/logo_mali.webp" class="img-responsive"></a>
                 </div>
             </div>
             <div class="text-left d-flex justify-content-center col-md-5 align-items-center" style="">
-                <h1 class="text-primary w-100 d-flex justify-content-center text-left align-items-center flex-grow-1" style="">
+                <h1 class="display-5 text-primary w-100 d-flex justify-content-center text-left align-items-center flex-grow-1" style="">
                     <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
             </div>
             <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
-                <h2 class="flex-grow-1 text-primary" style="text-align: center" contenteditable="true">
+                <h2 class="text-primary flex-grow-1" style="text-align: center" contenteditable="true">
                     <b>25.02.2023&nbsp; </b><b>18:20:35&nbsp;</b></h2>
-
+            </div>
+            <div class="col-md-2 d-flex align-items-center justify-content-end">
+                <button onclick="blink()">
+                    <a> <img src="../ikone/hslucaj.webp" class="img-responsive"></a></button>
+            </div>
         </div>
         <hr class="solid">
     </div>
 </div>
-<div class="row">
-    <div class="container-flex">
-        <div class="row">
-            <div class="col-lg-4 col-md-12 p-3" >
-                <h4><b></b></h4>
-            </div>
-        </div>
-    </div>
-</div>
 <div class="py-3" style="">
     <div class="container-flex">
-
-
-
     </div>
 </div>
 <div class="">
@@ -114,7 +117,7 @@
                         <h3>Trijažna kategorija 2</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ozbiljno bolestan, ozlijeđen prijent ....</h3>
+                        <h3>Ozbiljno bolestan ili ozlijeđen prijent. Potrebno pristupiti unutar 15 minuta.</h3>
                     </td>
                 </tr>
                 <tr>
@@ -125,7 +128,7 @@
                         <h3>Trijažna kategorija 3</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Opis TK 3</h3>
+                        <h3>Pacijent s ozbiljnim stanjima, ali trenutno stabilan. Potrebno pristupiti unutar 30 minuta.</h3>
                     </td>
                 </tr>
                 <tr>
@@ -136,7 +139,7 @@
                         <h3>Trijažna kategorija 4</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Opis TK 4</h3>
+                        <h3>Standardni pacijent, bez neposredne opasnosti po život. Potrebno pristupiti unutar 60 minuta.</h3>
                     </td>
                 </tr>
                 <tr>
@@ -147,7 +150,7 @@
                         <h3>Trijažna kategorija 5</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Opis TK 5</h3>
+                        <h3>Pacijenti koji nisu hitni slučajevi i nije im potreban hitna medicinska pomoć. Potrebno pristupiti unutar 120 minuta.</h3>
                     </td>
                 </tr>
                 </tbody>
